# MineAI

./: .gitignore  CMakeLists.txt  README.md
crate/: Cargo.toml
crate/src/: lib.rs  mineai.rs
src/: dllmain.cpp  dllmain.hpp  rust.hpp
